--- a/locale/en/augmentor.cfg
+++ b/locale/en/augmentor.cfg
@@ -7,7 +7,7 @@ cant-be-augmented=__1__ cannot be augmented.
 augmenting=__1__ augmenting
 
 [entity-description]
-augmentor=The augmentor takes any item and tries to upgrade its quality. The process can be enhanced further by Quality modules.
+augmentor=The augmentor takes any valid item and tries to upgrade its quality. The process can be further enhanced with Quality modules.
 
 [entity-name]
 augmentor=Augmentor
@@ -17,6 +17,6 @@ augmentor-base-quality=Base quality
 augmentor-base-crafting-speed=Base crafting speed
 augmentor-result-chance=Result chance
 [mod-setting-description]
-augmentor-base-quality=Base quality of Augmentor (does not increase with higher quality Augmentor)
+augmentor-base-quality=Base quality chance of Augmentor (does not increase with higher quality Augmentor)
 augmentor-base-crafting-speed=Crafting speed in seconds for a common Augmentor (increases with higher quality Augmentor)
 augmentor-result-chance=The chance of not consuming an item (an item is only upgraded if not consumed)
